Name:                 clash
Version:              0.2
Synopsis:             CAES Language for Synchronous Hardware
-- Description:
Homepage:             http://christiaanb.github.io/clash2
bug-reports:          http://github.com/christiaanb/clash2/issues
License:              BSD3
License-file:         LICENSE
Author:               Christiaan Baaij
Maintainer:           Christiaan Baaij <christiaan.baaij@gmail.com>
Copyright:            Copyright (C) 2013 University of Twente
Category:             Hardware
Build-type:           Simple

Extra-source-files:   README.md,
                      src-bin/HsVersions.h
                      src-bin/PosixSource.h

Data-files:           primitives/clash.bit.json,
                      primitives/clash.prelude.json,
                      primitives/clash.signal.json,
                      primitives/clash.sized.signed.json,
                      primitives/clash.sized.unsigned.json,
                      primitives/clash.sized.vectorz.json,
                      primitives/ghc.base.json,
                      primitives/ghc.classes.json,
                      primitives/ghc.err.json,
                      primitives/ghc.integer.type.json,
                      primitives/ghc.real.json,
                      primitives/ghc.typelits.json,
                      primitives/ghc.types.json,
                      primitives/unsafe.coerce.json

Cabal-version:        >=1.10

source-repository head
  type: git
  location: git://github.com/christiaanb/clash2.git

Flag standalone
  Description: Build compiler for non-cabal installation
  Default: False

Library
  HS-Source-Dirs:     src

  default-language:   Haskell2010
  ghc-options:        -Wall -fwarn-tabs

  Build-depends:      aeson                >= 0.6.0.2,
                      attoparsec           >= 0.10.2.0,
                      base                 >= 4.3.1.0,
                      bytestring           >= 0.9.2.1,
                      concurrent-supply    >= 0.1.3,
                      containers           >= 0.4.2.1,
                      directory            >= 1.1.0.2,
                      errors               >= 1.4.1,
                      filepath             >= 1.3.0.0,
                      ghc                  >= 7.7 && < 7.9,
                      hashable             >= 1.1.2.3,
                      lens                 >= 3.7.1,
                      listlike-instances   >= 0.2.3.1,
                      mtl                  >= 2.0.1.0,
                      pretty               >= 1.1.1.0,
                      process              >= 1.2.0.0,
                      template-haskell     >= 2.7.0.0,
                      text                 >= 0.11.1.13,
                      time                 >= 1.4.0.2,
                      transformers         >= 0.2.2.0,
                      unbound              >= 0.4.0.2,
                      unordered-containers >= 0.2.1.0,
                      uu-parsinglib        >= 2.7.4,
                      wl-pprint-text       >= 1.0.0.0

  Exposed-modules:    CLaSH.Core.DataCon
                      CLaSH.Core.FreeVars
                      CLaSH.Core.Literal
                      CLaSH.Core.Pretty
                      CLaSH.Core.Prim
                      CLaSH.Core.Subst
                      CLaSH.Core.Term
                      CLaSH.Core.TyCon
                      CLaSH.Core.Type
                      CLaSH.Core.TysPrim
                      CLaSH.Core.Util
                      CLaSH.Core.Var

                      CLaSH.Driver
                      CLaSH.Driver.PrepareBinding
                      CLaSH.Driver.TestbenchGen
                      CLaSH.Driver.Types

                      CLaSH.GHC.Compat.CoreSyn
                      CLaSH.GHC.Compat.DynFlags
                      CLaSH.GHC.Compat.FastString
                      CLaSH.GHC.Compat.GHC
                      CLaSH.GHC.Compat.Outputable
                      CLaSH.GHC.Compat.PrelNames
                      CLaSH.GHC.Compat.TyCon
                      CLaSH.GHC.GHC2Core
                      CLaSH.GHC.LoadInterfaceFiles
                      CLaSH.GHC.LoadModules
                      CLaSH.GHC.Types

                      CLaSH.Netlist
                      CLaSH.Netlist.BlackBox
                      CLaSH.Netlist.BlackBox.Parser
                      CLaSH.Netlist.BlackBox.Types
                      CLaSH.Netlist.BlackBox.Util
                      CLaSH.Netlist.Id
                      CLaSH.Netlist.Types
                      CLaSH.Netlist.Util
                      CLaSH.Netlist.VHDL

                      CLaSH.Normalize
                      CLaSH.Normalize.Strategy
                      CLaSH.Normalize.Transformations
                      CLaSH.Normalize.Types
                      CLaSH.Normalize.Util

                      CLaSH.Primitives.Types
                      CLaSH.Primitives.Util

                      CLaSH.Rewrite.Combinators
                      CLaSH.Rewrite.Types
                      CLaSH.Rewrite.Util

                      CLaSH.Util

  if flag(standalone)
    CPP-options:      -DSTANDALONE
  else
    CPP-options:      -DCABAL
    Build-depends:    ghc-paths >= 0.1.0.8
    Other-modules:    Paths_clash


Executable clash
  HS-Source-Dirs:     src-bin
  Main-Is:            Main.hs

  default-language:   Haskell2010
  GHC-Options:        -Wall -fno-warn-name-shadowing
  CPP-Options:        -DGHCI
  default-extensions: ForeignFunctionInterface
                      UnboxedTuples
                      FlexibleInstances
                      MagicHash
                      CPP
                      PatternGuards
                      NondecreasingIndentation

  Build-Depends:      base          >= 3   && < 5,
                      array         >= 0.1 && < 0.5,
                      bytestring    >= 0.9 && < 0.11,
                      directory     >= 1   && < 1.3,
                      process       >= 1   && < 1.3,
                      filepath      >= 1   && < 1.4,
                      ghc           >= 7.7,
                      transformers  >= 0.3,
                      haskeline     >= 0.7.0.3,
                      clash         >= 0.2
  if os(windows)
    Build-Depends:    Win32
  else
    Build-Depends:    unix

  if flag(standalone)
    CPP-Options:      -DSTANDALONE
  else
    Build-Depends:    ghc-paths


  C-Sources:          src-bin/hschooks.c

  Other-Modules:      InteractiveUI
                      GhciMonad
                      GhciTags
