name:                clash-benchmark
version:             0.0.0
synopsis:            Criterion based Clash benchmark
-- description:
homepage:            https://clash-lang.org/
license:             BSD2
author:              Leon Schoorl
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  HS-Source-Dirs:      common
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  Exposed-Modules:     BenchmarkCommon
  build-depends:       base,
                       concurrent-supply,
                       containers,
                       ghc,
                       mtl,
                       unordered-containers,

                       clash-ghc,
                       clash-lib,
                       clash-prelude

executable clash-benchmark-normalization
  main-is:             benchmark-normalization.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  build-depends:       base,
                       concurrent-supply,
                       containers,
                       criterion,
                       deepseq,
                       directory,
                       filepath,
                       unordered-containers,

                       clash-benchmark,
                       clash-ghc,
                       clash-lib,
                       clash-prelude
