name:                clash-benchmark
version:             0.0.0
synopsis:            Criterion based Clash benchmark
-- description:
homepage:            https://clash-lang.org/
license:             BSD2
author:              Leon Schoorl
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  HS-Source-Dirs:      common
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  Exposed-Modules:     BenchmarkCommon
  build-depends:       base,
                       concurrent-supply,
                       containers,
                       ghc,
                       mtl,
                       text,
                       unordered-containers,

                       clash-ghc,
                       clash-lib,
                       clash-prelude

executable clash-benchmark-normalization
  main-is:             benchmark-normalization.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       concurrent-supply,
                       containers,
                       criterion,
                       deepseq,
                       directory,
                       filepath,
                       text,
                       unordered-containers,

                       clash-benchmark,
                       clash-ghc,
                       clash-lib,
                       clash-prelude

executable clash-benchmark-concurrency
  main-is:             benchmark-concurrency.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       criterion,
                       time,

                       clash-lib,
                       clash-ghc,
                       clash-benchmark
