cabal-version:       2.2

name:                clash-cores
version:             1.6.3
synopsis:            A collection of IP cores for Clash
description:         A collection of IP cores for Clash
bug-reports:         https://github.com/clash-lang/clash-cores/issues
license:             BSD-2-Clause
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
copyright:           Copyright © 2019, Foamspace Corp.
category:            Hardware
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag unittests
  description:
    You can disable testing with unittests using `-f-unittests`.
  default: True
  manual: True

flag haddock
  description:
    Work-around haddock bug on GHC 8.6.*
  default: False
  manual: True

common basic-config
  default-language: Haskell2010

  default-extensions:
    BinaryLiterals
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    MagicHash
    NoImplicitPrelude
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  if impl(ghc >= 8.6)
    default-extensions:
      NoStarIsType

  ghc-options:
    -Wall -Wcompat

  if flag(haddock)
    ghc-options:
      -fdefer-type-errors
  else
    ghc-options:
      -fplugin GHC.TypeLits.Extra.Solver
      -fplugin GHC.TypeLits.Normalise
      -fplugin GHC.TypeLits.KnownNat.Solver

  build-depends:
    base                      >= 4.10  && < 5,
    clash-prelude,
    ghc-typelits-natnormalise >= 0.6,
    ghc-typelits-extra        >= 0.3.2,
    ghc-typelits-knownnat     >= 0.6,
    interpolate               >= 0.2,
    QuickCheck,
    template-haskell

library
  import: basic-config
  hs-source-dirs: src

  exposed-modules:
    Clash.Cores.Xilinx.Floating
    Clash.Cores.Xilinx.Floating.Annotations
    Clash.Cores.Xilinx.Floating.BlackBoxes
    Clash.Cores.Xilinx.Floating.Explicit
    Clash.Cores.Xilinx.Floating.Internal
    Clash.Cores.SPI
    Clash.Cores.UART
    Clash.Cores.LatticeSemi.ICE40.IO
    Clash.Cores.LatticeSemi.ICE40.Blackboxes.IO
    Clash.Cores.LatticeSemi.ECP5.IO
    Clash.Cores.LatticeSemi.ECP5.Blackboxes.IO

  ghc-options:
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    clash-lib,
    mtl       >= 2.1.1 && < 2.3,
    reducers  >= 3.12.2 && < 4.0,
    text      >= 1.2.2 && < 1.3

test-suite unittests
  import: basic-config
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: unittests.hs

  if !flag(unittests)
    buildable: False

  other-Modules:
    Test.Cores.Internal.SampleSPI
    Test.Cores.Internal.Signals
    Test.Cores.SPI
    Test.Cores.UART
    Test.Cores.SPI.MultiSlave

  build-depends:
    clash-cores,
    tasty        >= 1.2 && < 1.3,
    tasty-hunit,
    tasty-quickcheck
