Cabal-Version:  2.2
Name:           clash-cosim
Version:        0.0.0
License:        BSD-2-Clause
License-File:   LICENSE
Author:         John Verheij <https://github.com/jgjverheij>
Maintainer:     Martijn Bastiaan <martijn@qbaylogic.com>
Homepage:       https://github.com/clash-lang/clash-cosim
Category:       Hardware
Synopsis:       Co-simulation in Clash
Description:    clash-cosim implements Verilog cosimulation in Haskell and
                integrates with Clash natively. Cosimulation allows a user to
                write inline Verilog code and still produce an executable. For
                user documentation, see: <https://github.com/clash-lang/clash-cosim>.
Build-Type:     Custom

--
Data-Files:     src/cbits/cosim_vpi.vpi
                src/cbits/cosim_vpi.sl
                src/prims/verilog/Clash_CoSim_CoSimInstances.primitives.yaml

extra-tmp-files: src/prims/verilog/Clash_CoSim_CoSimInstances.primitives.yaml

Extra-Source-Files: src/cbits/comm/*.c
                    src/cbits/comm/*.h
                    src/cbits/control/*.c
                    src/cbits/control/*.h
                    src/cbits/include/*.h
                    src/cbits/process/*.c
                    src/cbits/process/*.h
                    src/cbits/traversing/*.c
                    src/cbits/traversing/*.h
                    src/cbits/types/*.c
                    src/cbits/types/*.h
                    src/cbits/*.c
                    src/cbits/Makefile
                    src/prims/verilog/README.md
                    tests/*.hs

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

custom-setup
--  ghc-options:   -Wall -Werror
  setup-depends: aeson,
                 base >= 4.10 && < 5,
                 bytestring,
                 Cabal,
                 directory,
                 neat-interpolation >= 0.3.0,
                 process,
                 template-haskell >= 2.0.0,
                 text,
                 yaml

source-repository head
  type: git
  location: https://github.com/clash-lang/clash-compiler.git
  subdir: clash-cosim

Library
  default-language: Haskell2010
  C-sources:        src/cbits/cosim_clash.c
-- TODO: Reintroduce this option, without breaking tests:
--  LD-Options:       --fatal-warnings
  ghc-options:      -Wall -Wcompat -fexpose-all-unfoldings -fno-worker-wrapper
  if flag(pedantic)
    ghc-options: -Werror
  CC-Options:       -fPIC -Wall -Werror
  HS-Source-Dirs:   src
  Build-Depends:    base                      >= 4.10    && < 5,
                    clash-prelude             >= 0.99,
                    deepseq                   >= 1.4.0,
                    ghc-typelits-extra        >= 0.2.1,
                    ghc-typelits-knownnat     >= 0.2.2,
                    ghc-typelits-natnormalise >= 0.4.2,
                    infinite-list             >= 0.1,
                    neat-interpolation        >= 0.3.0,
                    parsec                    >= 3.0.0,
                    random                    >= 1.0.0,
                    template-haskell          >= 2.0.0,
                    text

  Autogen-Modules:  Paths_clash_cosim

  Exposed-Modules:  Clash.CoSim.CodeGeneration,
                    Clash.CoSim.CoSimInstances,
                    Clash.CoSim.DSLParser,
                    Clash.CoSim.Simulator,
                    Clash.CoSim.Types,
                    Clash.CoSim,
                    Paths_clash_cosim

  Autogen-Modules:  Paths_clash_cosim
  cpp-options:      -DCABAL

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5,
      clash-cosim,
      clash-prelude >= 0.99,
      ghc-typelits-extra,
      ghc-typelits-knownnat,
      ghc-typelits-natnormalise,
      deepseq,
      tasty >= 1.0,
      tasty-hunit,
      tasty-quickcheck,
      template-haskell
  ghc-options:   -Wall -Wcompat
  if flag(pedantic)
    ghc-options: -Werror
