cabal-version:      2.2

name:               clash-ffi
version:            1.5.0
synopsis:           Interact with Simulators from Clash
description:        Interact with Simulators from Clash
bug-reports:        https://github.com/clash-lang/clash-compiler/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2022, QBayLogic B.V.
category:           Hardware

common common-options
  default-language: Haskell2010
  default-extensions:
    ScopedTypeVariables
    TypeApplications
  ghc-options:
    -Wall -Wcompat
  build-depends:
    base                    >= 4.11 && < 4.18,
    bytestring              >= 0.10 && < 0.12,
    clash-prelude           >= 1.2  && < 1.8,
    deepseq                 >= 1.4  && < 1.5,
  include-dirs: include
  includes: vpi_user.h
  cpp-options:
    -DVERILOG=1
    -DIVERILOG=1
    -DVERILOG_2001=1
    -DVERILOG_2005=1
    -DVPI_VECVAL=1

library
  import: common-options
  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
  build-depends:
    derive-storable         >= 0.3  && < 0.4,
    derive-storable-plugin  >= 0.2  && < 0.3,
    mtl                     >= 2.2  && < 2.3,
  hs-source-dirs: src
  c-sources: cbits/entry_vpi.c
  exposed-modules:
    Clash.FFI.Monad
    Clash.FFI.View
    Clash.FFI.VPI.Callback
    Clash.FFI.VPI.Callback.Reason
    Clash.FFI.VPI.Control
    Clash.FFI.VPI.Error
    Clash.FFI.VPI.Error.Level
    Clash.FFI.VPI.Error.State
    Clash.FFI.VPI.IO
    Clash.FFI.VPI.Info
    Clash.FFI.VPI.Iterator
    Clash.FFI.VPI.Module
    Clash.FFI.VPI.Net
    Clash.FFI.VPI.Object
    Clash.FFI.VPI.Object.Property
    Clash.FFI.VPI.Object.Time
    Clash.FFI.VPI.Object.Type
    Clash.FFI.VPI.Object.Value
    Clash.FFI.VPI.Object.Value.Delay
    Clash.FFI.VPI.Object.Value.Format
    Clash.FFI.VPI.Object.Value.Parse
    Clash.FFI.VPI.Object.Value.Scalar
    Clash.FFI.VPI.Object.Value.Vector
    Clash.FFI.VPI.Parameter
    Clash.FFI.VPI.Port
    Clash.FFI.VPI.Port.Direction
    Clash.FFI.VPI.Reg

executable ffi-interface-tests
  import: common-options
  default-extensions:
    DataKinds
    RankNTypes
    LambdaCase
    ViewPatterns
    TupleSections
    ImplicitParams
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    ExistentialQuantification
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Clash.FFI.Test
    Clash.FFI.Test.Instances
  include-dirs: tests/cbits
  c-sources:
    tests/cbits/VPI.c
    tests/cbits/Test.c
    tests/cbits/Pipe.c
    tests/cbits/Print.c
  build-depends:
    , clash-ffi
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-smallcheck
